--- a/4. Source code front-end/style9.css
+++ b/4. Source code front-end/style9.css
@@ -226,12 +226,48 @@ header img {
 	left: calc(10% + 70px);;
 	padding: 10px;
 }
+/*Tab chọn chức vụ*/
+.department {
+	width: calc(90% - 70px);
+	height: 8%;
+	position: fixed;
+	top: 10%;
+	left: calc(10% + 70px);
+	display: flex;
+}
+
+.department-tag {
+	width: 33.3%;
+	height: 100%;
+	box-shadow: 0 4px 4px 0 rgba(0,0,0,0.25);
+	display: flex;
+	align-items: center;
+}
+
+.department-tag p {
+	text-align: center;
+	font-size: calc(1vw + 18px);
+	width: 100%;
+}
+
+.highlight {
+	background-color: #FFD12B;
+}
+
+.darken {
+	background-color: #D9D9D9;
+}
+
+.darken p {
+	opacity: 50%;
+}
 /*Nút tạo mới*/
 .add-new {
 	height: 80px;
 	width: calc(90% - 90px);
 	position: fixed;
 	padding: 0;
+	top: calc(10% + 70px);
 	display: flex;
 	overflow: hidden;
 }
@@ -249,7 +285,7 @@ header img {
 /*Bảng dữ liệu*/
 table {
 	position: relative;
-	top: 90px;
+	top: calc(10% + 80px);
 	height: fit-content;
 	width: calc(90% - 100px);
 	overflow: auto;
